--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -38,6 +38,9 @@
   .header__label {
     z-index: 11;
     display: flex;
+    position: fixed;
+    top: 18px;
+    right: 30px;
   }
   .header__label:has(.header__checkbox:checked) ~ .header__nav_enter {
     visibility: visible;
